--- a/SolickManagerV3_4/Pages/AccountingPage.xaml
+++ b/SolickManagerV3_4/Pages/AccountingPage.xaml
@@ -5,10 +5,58 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SolickManagerV3_4.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="680" d:DesignWidth="1280"
       Title="AccountingPage">
-
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <Border Grid.Column="0"
+                Width="350"
+                Height="350"
+                CornerRadius="10"
+                BorderThickness="0"
+                Background="#3993DD"
+                MouseLeftButtonDown="ListBankAccounts"
+                Style="{DynamicResource ElementButton}"
+                Padding="5">
+            <StackPanel>
+                <Image Source="/Pages/Images/BankAccount.png"
+                       Width="225"
+                       Margin="0 50 0 20"/>
+                <TextBlock Text="Счета"
+                           FontSize="24"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Bottom"
+                           Foreground="White"
+                           FontFamily="Inter"
+                           FontWeight="Medium"/>
+            </StackPanel>
+        </Border>
+
+        <Border Grid.Column="1"
+                Width="350"
+                Height="350"
+                CornerRadius="10"
+                BorderThickness="0"
+                Background="#3993DD"
+                MouseLeftButtonDown="ListOperations"
+                Style="{DynamicResource ElementButton}"
+                Padding="5">
+            <StackPanel>
+                <Image Source="/Pages/Images/BankOperation.png"
+                       Width="225"
+                       Margin=" 0 45 0 25"/>
+                <TextBlock Text="Операции"
+                           FontSize="24"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Bottom"
+                           Foreground="White"
+                           FontFamily="Inter"
+                           FontWeight="Medium"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Page>
