--- a/SolickManagerV3_4/Pages/ListShipmentsPage.xaml
+++ b/SolickManagerV3_4/Pages/ListShipmentsPage.xaml
@@ -24,6 +24,7 @@
                         Padding="0 20 0 10">
                     
                     <DataGrid Style="{DynamicResource DataGridSolickStyle}" AutoGenerateColumns="False" 
+                              VerticalAlignment="Top"
                               HeadersVisibility="Column"
                               IsReadOnly="true"
                               ItemsSource="{Binding Shipments}"
@@ -31,7 +32,7 @@
                               HorizontalAlignment="Left"
                               MinWidth="940"
                               Width="auto"
-                              Height="auto"
+                              Height="620"
                               HorizontalGridLinesBrush="Transparent"
                               VerticalGridLinesBrush="Transparent">
                         <DataGrid.ColumnHeaderStyle>
